--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # to exclude Obsidian's settings (including plugin and hotkey configurations)
-.obsidian/
+!.obsidian/
+.obsidian/*
 
 # to only exclude plugin configuration. Might be useful to prevent some plugin from exposing sensitive data
 # .obsidian/plugins
