--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,25 @@
 # to exclude Obsidian's settings (including plugin and hotkey configurations)
-!.obsidian/
 .obsidian/*
 
 # to only exclude plugin configuration. Might be useful to prevent some plugin from exposing sensitive data
-# .obsidian/plugins
+.obsidian/plugins
 
 # OR only to exclude workspace cache
-# .obsidian/workspace.json
+.obsidian/workspace.json
 
 # to exclude workspace cache specific to mobile devices
-# .obsidian/workspace-mobile.json
+.obsidian/workspace-mobile.json
 
 # Add below lines to exclude OS settings and caches
 .trash/
 .DS_Store
 
-# exclude hotkey setting
-!.obsidian/hotkeys.json
-
 # exclude folder
 00.\ Inbox/
 03.\ Life/
+
+# exclude Untitled Notes
+Untitled*
 
 # exclude specific extensions
 *.png
